5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1815_2564.log
== TEST (2019-06-12 11:15:19) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:25:25) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i)
		vt1 = 0
		vp1 = 0
		vd1 = 0
		for elementos in vet1:
			if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
			elif	(vet1[i] == vet2[i]):
					vp1 = vp1 + 1
			elif	(vet1[i] < vet2[i]):
					vd1 = vd1 + 1
		i = i + 1
a = a[0] + vt1
a = a[1] + vp1
a = a[2] + vd1
print(a)

	
-- ERROR:
File "XXXX", line 9
    while	(size(vet1) > i)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:25:38) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i)
		vt1 = 0
		vp1 = 0
		vd1 = 0
		for elementos in vet1:
			if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
			elif	(vet1[i] == vet2[i]):
					vp1 = vp1 + 1
			elif	(vet1[i] < vet2[i]):
					vd1 = vd1 + 1
		i = i + 1
a = a[0] + vt1
a = a[1] + vp1
a = a[2] + vd1
print(a)

	
-- ERROR:
File "XXXX", line 9
    while	(size(vet1) > i)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:25:49) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i)
		vt1 = 0
		vp1 = 0
		vd1 = 0
		for elementos in vet1:
			if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
			elif	(vet1[i] == vet2[i]):
					vp1 = vp1 + 1
			elif	(vet1[i] < vet2[i]):
					vd1 = vd1 + 1
		i = i + 1
a = a[0] + vt1
a = a[1] + vp1
a = a[2] + vd1
print(a)

	
-- ERROR:
File "XXXX", line 9
    while	(size(vet1) > i)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:26:02) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		for elementos in vet1:
			if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
			elif	(vet1[i] == vet2[i]):
					vp1 = vp1 + 1
			elif	(vet1[i] < vet2[i]):
					vd1 = vd1 + 1
		i = i + 1
a = a[0] + vt1
a = a[1] + vp1
a = a[2] + vd1
print(a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:28:02) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		for elementos in vet1:
			if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
			elif	(vet1[i] == vet2[i]):
					vp1 = vp1 + 1
			elif	(vet1[i] < vet2[i]):
					vd1 = vd1 + 1
		i = i + 1

print(a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:28:46) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		for elementos in vet1:
			if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
			elif	(vet1[i] == vet2[i]):
					vp1 = vp1 + 1
			elif	(vet1[i] < vet2[i]):
					vd1 = vd1 + 1
		i = i + 1

print(vt1)
print(vp1)
print(vd1)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:32:10) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i):
		vt1 = 0
		vp1 = 0
		vd1 = 0

		if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
		elif	(vet1[i] == vet2[i]):
					vp1 = vp1 + 1
		elif	(vet1[i] < vet2[i]):
					vd1 = vd1 + 1
		i = i + 1

print(vt1)
print(vp1)
print(vd1)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:32:22) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i):
		vt1 = 0
		vp1 = 0
		vd1 = 0

		if	(vet1[i] >  vet2[i]):
			vt1 = vt1 + 1
		elif	(vet1[i] == vet2[i]):
				vp1 = vp1 + 1
		elif	(vet1[i] < vet2[i]):
				vd1 = vd1 + 1
		i = i + 1

print(vt1)
print(vp1)
print(vd1)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:33:18) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i):
		vt1 = 0
		vp1 = 0
		vd1 = 0

		if	(vet1[i] >  vet2[i]):
			vt1 = vt1 + 1
		elif	(vet1[i] == vet2[i]):
				vp1 = vp1 + 1
		elif	(vet1[i] < vet2[i]):
				vd1 = vd1 + 1
			i = i + 1

print(vt1)
print(vp1)
print(vd1)

	
-- ERROR:
File "XXXX", line 20
    i = i + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:34:43) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i):
		vt1 = 0
		vp1 = 0
		vd1 = 0

		if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
		elif	(vet1[i] == vet2[i]):
				vp1 = vp1 + 1
		elif	(vet1[i] < vet2[i]):
				vd1 = vd1 + 1
		i = i + 1

print(vt1)
print(vp1)
print(vd1)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:37:24) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		for elementos in vet1:
			if	(elementos >  vet2[i]):
				vt1 = vt1 + 1
			elif	(elementos == vet2[i]):
					vp1 = vp1 + 1
			elif	( elementos < vet2[i]):
					vd1 = vd1 + 1
		i = i + 1

print(vt1)
print(vp1)
print(vd1)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:37:51) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		for elementos in vet1:
			if	(elementos >  vet2[i]):
				vt1 = vt1 + 1
			elif	(elementos == vet2[i]):
					vp1 = vp1 + 1
			elif	( elementos < vet2[i]):
					vd1 = vd1 + 1
		i = i + 1

print(vt1)
print(vp1)
print(vd1)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:40:57) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		for elementos in vet1:
			if	(elementos >  vet2[i]):
				vt1 = vt1 + 1
			elif	(elementos == vet2[i]):
					vp1 = vp1 + 1
			elif	( elementos < vet2[i]):
					vd1 = vd1 + 1
		i = i + 1
	print(elemento)

print(vt1)
print(vp1)
print(vd1)

	
-- ERROR:
File "XXXX", line 21
    print(elemento)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:41:04) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		for elementos in vet1:
			if	(elementos >  vet2[i]):
				vt1 = vt1 + 1
			elif	(elementos == vet2[i]):
					vp1 = vp1 + 1
			elif	( elementos < vet2[i]):
					vd1 = vd1 + 1
		i = i + 1
	print(elementos)

print(vt1)
print(vp1)
print(vd1)

	
-- ERROR:
File "XXXX", line 21
    print(elementos)
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:41:18) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		for elementos in vet1:
			if	(elementos >  vet2[i]):
				vt1 = vt1 + 1
			elif	(elementos == vet2[i]):
					vp1 = vp1 + 1
			elif	( elementos < vet2[i]):
					vd1 = vd1 + 1
		i = i + 1
			print(elementos)

print(vt1)
print(vp1)
print(vd1)

	
-- ERROR:
File "XXXX", line 21
    print(elementos)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:41:25) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		for elementos in vet1:
			if	(elementos >  vet2[i]):
				vt1 = vt1 + 1
			elif	(elementos == vet2[i]):
					vp1 = vp1 + 1
			elif	( elementos < vet2[i]):
					vd1 = vd1 + 1
		i = i + 1
				print(elementos)

print(vt1)
print(vp1)
print(vd1)

	
-- ERROR:
File "XXXX", line 21
    print(elementos)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:43:05) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))

i = 0
a = zeros(3, dtype=int)

while	(size(vet1) > i):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		for elementos in vet1:
			if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
			elif	(vet1[i] == vet2[i]):
					vp1 = vp1 + 1
			elif	( vet1[i] < vet2[i]):
					vd1 = vd1 + 1
		i = i + 1


print(vt1)
print(vp1)
print(vd1)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:51:24) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))


a = zeros(3, dtype=int)

for in range(size(vet)):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		
		if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
		elif	(vet1[i] == vet2[i]):
					vp1 = vp1 + 1
		elif	( vet1[i] < vet2[i]):
					vd1 = vd1 + 1
		


a[0] = vt1
a[1] = vp1
a[2] = vd1
print(a)

	
-- ERROR:
File "XXXX", line 9
    for in range(size(vet)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:51:49) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))


a = zeros(3, dtype=int)

for i in range(size(vet)):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		
		if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
		elif	(vet1[i] == vet2[i]):
					vp1 = vp1 + 1
		elif	( vet1[i] < vet2[i]):
					vd1 = vd1 + 1
		


a[0] = vt1
a[1] = vp1
a[2] = vd1
print(a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 11:52:44) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))


a = zeros(3, dtype=int)

for i in range(size(vet1)):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		
		if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
		elif	(vet1[i] == vet2[i]):
					vp1 = vp1 + 1
		elif	( vet1[i] < vet2[i]):
					vd1 = vd1 + 1
		


a[0] = vt1
a[1] = vp1
a[2] = vd1
print(a)

	
-- EXECUTION TIME:
0.843489
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[0 0 1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 1]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[1 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:52:48) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))


a = zeros(3, dtype=int)

for i in range(size(vet1)):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		
		if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
		elif	(vet1[i] == vet2[i]):
					vp1 = vp1 + 1
		elif	( vet1[i] < vet2[i]):
					vd1 = vd1 + 1
		


a[0] = vt1
a[1] = vp1
a[2] = vd1
print(a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 11:53:39) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))


a = zeros(3, dtype=int)

for i in range(size(vet1)):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		
		if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
		elif	(vet1[i] == vet2[i]):
					vp1 = vp1 + 1
		elif	( vet1[i] < vet2[i]):
					vd1 = vd1 + 1
		


		a[0] = vt1
		a[1] = vp1
		a[2] = vd1
print(a)

	
-- EXECUTION TIME:
1.16201
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[0 0 1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
Digite os gols: Digite os gols: [0 0 1]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
Digite os gols: Digite os gols: [1 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:54:10) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))


a = zeros(3, dtype=int)

for i in range(size(vet1)):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		
		if	(vet1[i] >  vet2[i]):
				vt1 = vt1 + 1
		elif	(vet1[i] == vet2[i]):
					vp1 = vp1 + 1
		elif	( vet1[i] < vet2[i]):
					vd1 = vd1 + 1
		a[0] = vt1
		a[1] = vp1
		a[2] = vd1
print(a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:56:46) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))


a = zeros(3, dtype=int)

for i in range(size(vet1)):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		c = vet1(i)
		d = vet2(i)
		
		if	(c > d):
				vt1 = vt1 + 1
		elif	(c == d):
					vp1 = vp1 + 1
		elif	( c < d):
					vd1 = vd1 + 1
		a[0] = vt1
		a[1] = vp1
		a[2] = vd1
print(a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:56:58) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))


a = zeros(3, dtype=int)

for i in range(size(vet1)):
		vt1 = 0
		vp1 = 0
		vd1 = 0
		c = vet1(i)
		d = vet2(i)
		
		if	(c > d):
				vt1 = vt1 + 1
		elif	(c == d):
					vp1 = vp1 + 1
		elif	( c < d):
					vd1 = vd1 + 1
		a[0] = vt1
		a[1] = vp1
		a[2] = vd1
print(a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:59:39) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))
vt1 = 0
vp1 = 0
vd1 = 0
a = zeros(3, dtype=int)

for i in range(size(vet1)):
		c = vet1(i)
		d = vet2(i)
		
		if	(c > d):
				vt1 = vt1 + 1
		elif	(c == d):
					vp1 = vp1 + 1
		elif	( c < d):
					vd1 = vd1 + 1
		a[0] = vt1
		a[1] = vp1
		a[2] = vd1
print(a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 11:59:46) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))
vt1 = 0
vp1 = 0
vd1 = 0
a = zeros(3, dtype=int)

for i in range(size(vet1)):
		c = vet1(i)
		d = vet2(i)
		
		if	(c > d):
				vt1 = vt1 + 1
		elif	(c == d):
					vp1 = vp1 + 1
		elif	( c < d):
					vd1 = vd1 + 1
		a[0] = vt1
		a[1] = vp1
		a[2] = vd1
print(a)

	
-- EXECUTION TIME:
1.07396
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2564/main.py", line 11, in <module>
    c = vet1(i)
TypeError: 'numpy.ndarray' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:59:48) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))
vt1 = 0
vp1 = 0
vd1 = 0
a = zeros(3, dtype=int)

for i in range(size(vet1)):
		c = vet1(i)
		d = vet2(i)
		
		if	(c > d):
				vt1 = vt1 + 1
		elif	(c == d):
					vp1 = vp1 + 1
		elif	( c < d):
					vd1 = vd1 + 1
		a[0] = vt1
		a[1] = vp1
		a[2] = vd1
print(a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:01:26) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))
vt1 = 0
vp1 = 0
vd1 = 0
a = zeros(3, dtype=int)

for i in range(size(vet1)):
		
		if	( vet1(i) > vet2(i)):
				vt1 = vt1 + 1
		elif	( vet1(i) == vet2(i)):
					vp1 = vp1 + 1
		elif	(  vet1(i) < vet2(i)):
					vd1 = vd1 + 1
		a[0] = vt1
		a[1] = vp1
		a[2] = vd1
print(a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:02:42) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))
vt1 = 0
vp1 = 0
vd1 = 0
a = zeros(3, dtype=int)

for i in range(size(vet1)):
		
	if	( vet1(i) > vet2(i)):
			vt1 = vt1 + 1
	elif	( vet1(i) == vet2(i)):
				vp1 = vp1 + 1
	elif	(  vet1(i) < vet2(i)):
				vd1 = vd1 + 1
	a[0] = vt1
	a[1] = vp1
	a[2] = vd1
print(a)

	
-- EXECUTION TIME:
1.02504
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2564/main.py", line 12, in <module>
    if	( vet1(i) > vet2(i)):
TypeError: 'numpy.ndarray' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:04:33) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))
vt1 = 0
vp1 = 0
vd1 = 0
a = zeros(3, dtype=int)

for i in range(size(vet1)):
		
	if	( vet1[i] > vet2[i]):
			vt1 = vt1 + 1
	elif	( vet1[i] == vet2[i]:
				vp1 = vp1 + 1
	elif	(  vet1[i] < vet2[i])
				vd1 = vd1 + 1
	a[0] = vt1
	a[1] = vp1
	a[2] = vd1
print(a)

	
-- ERROR:
File "XXXX", line 14
    elif	( vet1[i] == vet2[i]:
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:04:44) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))
vt1 = 0
vp1 = 0
vd1 = 0
a = zeros(3, dtype=int)

for i in range(size(vet1)):
		
	if	( vet1[i] > vet2[i]):
			vt1 = vt1 + 1
	elif	( vet1[i] == vet2[i]):
				vp1 = vp1 + 1
	elif	(  vet1[i] < vet2[i]):
				vd1 = vd1 + 1
	a[0] = vt1
	a[1] = vp1
	a[2] = vd1
print(a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:05:10) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Digite os gols: ")))
vet2 = array(eval(input("Digite os gols: ")))
vt1 = 0
vp1 = 0
vd1 = 0
a = zeros(3, dtype=int)

for i in range(size(vet1)):
		
	if	( vet1[i] > vet2[i]):
			vt1 = vt1 + 1
	elif	( vet1[i] == vet2[i]):
				vp1 = vp1 + 1
	elif	(  vet1[i] < vet2[i]):
				vd1 = vd1 + 1
	a[0] = vt1
	a[1] = vp1
	a[2] = vd1
print(a)

	
-- EXECUTION TIME:
1.13431
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
